feat: implementação das funcionalidades da pagina results por simulação